@@ -22,6 +22,26 @@ ctrl+w：逐级选中
 
 alt+左右方向：切换已经打开的文件
 
+ctrl+r：修改同样的内容
+
+ctrl+alt+o：删除无用的包
+
+解决intellij idea卡顿的方法:进入电脑中intellij idea的安装目录中去，找到其中的bin文件夹，
+在bin文件夹中有两个文件，分别叫做:idea.exe.vmoptions与idea64.exe.vmoptions
+修改成
+
+-Xms1024m  
+-Xmx4096m  
+-XX:ReservedCodeCacheSize=1024m  
+-XX:+UseConcMarkSweepGC  
+-XX:+UseParNewGC  
+-XX:+DisableExplicitGC  
+-XX:SoftRefLRUPolicyMSPerMB=50  
+-Xverify:none  
+-ea  
+-Dsun.io.useCanonCaches=false  
+-Djava.net.preferIPv4Stack=true
+
 ---
 markdown有关知识：
 
@@ -48,3 +68,12 @@ thymeleaf引用后端传来的变量的时候有红色下划线报错，实际�
 ajax不支持重定向，在后端无法return一个页面，因此需要在ajax的success函数内重定向window.location="指定页面地址"
 
 jquery引用需要放在bootstrap前面，不然还是会报错
+
+myBatis-plus异常提示For input string: "{0=null}"  
+解决方法：在<when test=""></when>标签中接收参数的时候test中去掉#{}直接写上参数的名称就可以了<if test=""></if>也是一样！！！！
+
+写拦截器的时候需要注意：拦截器本身不能实现自动注入，是因为拦截器是通过new的方式创建的拦截器，
+通过new出来的实例是没有交给spring进行管理的，没有被spring管理的实例，
+spring是无法自动注入bean的，所以为null  
+解决办法：通过@bean注解注入拦截器到spring当中,同时给拦截器加上@compent注解，
+参照WebConfig
